<resources>
    <string name="app_name">AI_Travel_Planner</string>

    <!-- Login -->
    <string name="google_login">Login with Google</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="apple_login">Login with Apple</string>

    <!-- Home -->
    <string name="most_viewed">Most Viewed</string>
    <string name="popular_places">Popular Places</string>
    <string name="see_all">See All</string>
    <string name="home">Home</string>
    <string name="search">Time</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="rating">Rating</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
    <string name="time">Time</string>
    <string name="icon">Icon</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="bus">Bus</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="passengers">Passengers</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="plane">Plane</string>
</resources>
