<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:contentDescription="@string/home" />

    <item
        android:id="@+id/nav_time"
        android:icon="@drawable/time"
        android:title="@string/search"
        android:contentDescription="@string/search" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/favorite"
        android:title="@string/favorites"
        android:contentDescription="@string/favorites" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        android:contentDescription="@string/profile" />

</menu>
